module-3/templates/apis/customer-ingress-api.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: api-ingress-customers
  namespace: apps
  annotations:                                      # Add API annotation to enable APIM
    hub.traefik.io/api: customer-api
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`api.traefik.${EXTERNAL_IP}.sslip.io`) && PathPrefix(`/customers`)
      services:
        - name: customer-app
          port: 3000
  tls:
    certResolver: le
