module-3/templates/apis/external-ingress-api.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: external-ingress-time
  namespace: apps
  annotations:
    hub.traefik.io/api: time-api
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`api.traefik.${EXTERNAL_IP}.sslip.io`) && PathPrefix(`/time`)
      services:
        - name: world-time-api
          port: 443
  tls:
    certResolver: le
