module-3/templates/apis/ticket-ingress-api.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: api-ingress-tickets
  namespace: apps
  annotations:
    hub.traefik.io/api: ticket-api
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`api.traefik.${EXTERNAL_IP}.sslip.io`) && PathPrefix(`/tickets`)
      services:
        - name: ticket-app
          port: 3000
  tls:
    certResolver: le
